src/main/resources/web/themes/default/editor.css
/* Vortex overriding section */


/* ****** START: tab styling */

div.activeTab { 
  background-color: #efefef;
  border-bottom: 0px; 
}

div.tabs ul li.activeTab a, div.tabs ul li.activeTab a:hover {
  background-color: #efefef;
}

/* ****** END: tab styling */


/* ****** START: content and generic styling */

#contents {
  background-color: #efefef;
  overflow:visible; 
}

#contents h2 {
  margin-top: 0;
  font-size: 115%;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #aaaaaa;
  margin-bottom: 1.5em;
}

#help-link{
  float: right; 
  font-size: 80%; 
}

form.editor {
  padding:0; 
  margin: 0;
  margin-top: -14px;
}

iframe {
  border: 1px solid #ddd;
}

* html div.html-content iframe {
  margin: -1px; /* Fix for vertical scrollbar in IE6 */
}

span.error{
  color: red;
}

label {
  display: block; 
  margin-bottom: .2em;
  white-space: nowrap;
  width:1%;
  font-size: .9em;
}

label.resource\.recursive-listing, label.resource\.hide-last-modified, label.resource\.hide-published-date, label.resource\.hide-introduction, label.resource\.hide-introduction-image, label.resource\.hide-end-date, label.resource\.hide-location {
	display: inline;
}

div.properties {
 clear:both;
 height: 1%; /* For IE */
}

div.save-cancel{
  /* margin-top: 0.5em; */
}

* html div.save-cancel{
	margin-top:0;
}

div.properties:after {
  clear:both;
  content:".";
  display:block;
  visibility:hidden;
  height: 0;
}

div.property-item {
  /* XXX: temporary clear: both;*/ 
  margin-bottom: 1em;
}

/* ****** END: content and generic styling */


/* ****** START: collection- event and articlelisting parameters styling */

div#allowedValues {
   margin-bottom: 1em;	
}

div.page-limit {
	clear:both;
	padding-bottom:1em;
}

.page-limit label{
	margin-top:0;
	padding-top:0;
	padding-right:6px;
	width:auto;
	float:left;
	clear:left;
}

.page-limit select{
	float:left;
}

div.sorting,
div.recursive-listing{
	clear:both;
	margin:0 0;
	padding-bottom:.3em;
	float:left;
} 

* html div.sorting,
* html div.recursive-listing{
	padding: 0;
	float:none;
}

.sorting input,
.recursive-listing input{
	display:block;
	float:left;
	clear:left;
	margin:0;
	margin-right:.6em;
	height:22px;
}

* html .sorting input,
* html  .recursive-listing input{
	margin-right:0;
	margin-top:0;
	height:auto;
}

.sorting label,
.recursive-listing label{
	margin:0;
	padding:0;
	display:block;
	float:inherit;
	clear:right;
	margin-top:2px;
	height:20px;
}

* html .sorting label,
* html .recursive-listing label {
	float:none;
	height:auto;
}

div.hide-last-modified,
div.hide-published-date,
div.hide-introduction,
div.hide-end-date,
div.hide-location,
div.hide-introduction-image{
	margin-bottom:0px !important;
	clear:both;
}

.hide-location label,
.hide-end-date label,
.hide-published-date label,
.hide-last-modified label, 
.hide-introduction label,
.hide-introduction-image label{
	margin:0;
	margin-top:.3em;
}
.hide-location input,
.hide-end-date input,
.hide-published-date input,
.hide-last-modified input, 
.hide-introduction input, 
.hide-introduction-image input{
	margin:0;
	margin-right:.2em;
}

/* ****** END: collection- event and articlelisting parameters styling */


/* ****** START: Introduction styling */

#resource\.userTitle {
  width: 40%;	
}

#resource\.htmlTitle {
  width: 40%;	
}

span.input-description{
    font-size: .8em;
}

div.introduction {
  clear:left;
  float: left; 
  width: 40%;  
  margin-right: 1.2em;
  margin-bottom: 1em;
}

div.introduction textarea {
  height: 22.5ex; /* Used when fck-editor is disabled */
  width: 40%;  
}

/* div.introduction iframe {
  height: 13ex;
} */


#resource\.introduction___Frame {
  height: 16.75ex;
}


* html #resource\.introduction___Frame {
  height: 15.75ex;
}

/* ****** END: Introduction styling */


/* ****** START: Picture (input, button, preview) and caption styling */

div.picture {
  width: 520px;
  float: left;
  position: relative;
  clear: right; /*IE7*/
  margin-bottom: 0;
}

#input-and-button-container {
  width: 330px;
  float: left;
  position: relative;
  height: 1%;
  overflow: hidden; 
  margin: 0;
  padding: 0;
}

* html #input-and-button-container {
  width: 325px; 
}

div.picture input{
  width: 180px;
  float: left;
  position: relative;
  margin: 0;
  margin-right: .25em;
  padding: 1px 0;
}

* html div.picture input {
  width:161px;
  margin-top: 0.2em;	
}

div.picture button{
  float: left;
  position: relative;
  margin: 0;
}

* html div.picture button {
  margin-top: 0.1em;	
}

/* Fix for wide images not breaking */
#resource\.picture\.preview {
  whitespace: nowrap;
  margin: 0 0 0 347px;
}

* html #resource\.picture\.preview {
  margin: 0 0 0 345px;
  margin-top: 0.1em;
}

div.picture img { 
  height: 16.5ex;
  max-width:200px;
  float: left;
  position: relative;
  
}
* html div.picture img { 
  height: 15.5ex;
}

/*
div.picture div {
  border: 1px solid #ccc;

 }

* html div.picture div {
  height: 71pt;
}
*/

div.caption {
  width: 327px;
  float: left;
  position: relative;
  overflow: hidden;
  margin-top: -100px;
}

/* IE6 fix */
* html div.caption {
   width: 327px; 
   margin-top: -98px;
}

div.caption textarea{
	height: 10ex;
}
#resource\.caption___Frame {
	height: 10ex;
}

/* ****** END Picture: (input, button, preview) and caption styling */


/* ****** START: (Main) Content styling */

div.html-content {
 clear:both;
 margin-bottom: 1em; 
}

div.html-content textarea {
 width: 100%;
 height: 20em;
}

* html div.html-content iframe {
  height: 20em; 
} 

#resource\.content___Frame{
  height: 20em;
}

/* ****** END: (Main) Content styling */


/* ****** START: Event and Article specific styling */

div.authors { 
  clear: left;
  float: left;
  white-space: nowrap;
}

div.published-date {  
  clear: left;
  float: left;
  white-space: nowrap;  
} 

/* START time and place */

div.start-date, div.end-date, div.location {
  float:left;
  margin-right: 1em;
  white-space: nowrap;
}

* html div.end-date, * html div.location {
  clear: left;
  padding-bottom: 1em;
}

/* There is IE7-specific conditional comments in editor.ftl for time and place elements */

div.start-date {
  clear:left;
}

input.date {
  width: 6.5em;
}

* html input.date {
  width: 5em;
}

input.hours, input.minutes {
  width: 1.5em;
}


div.yui-skin-sam {
    display: none;
}

span.colon {
  padding: 0 .2em;
}

/* END: time and place */


/* START: YUI calendar */

a.calendar {
  width: 19px;
  height: 19px;
  background: url(cal.gif) no-repeat 0 0;
  text-decoration: none;
}

a.calendar span {
  visibility:hidden;
}

.yui-calcontainer {
   font-size: 11px;
   position:absolute; 
   float: none;
   margin-left: 10.5em;
   margin-top: -18.5em; 
   background-color:#f7f7f7;
   padding-top: 5px;
   padding-left: 0px;
   padding-right: 0px;
   padding-bottom: 0px;
   border: 1px solid #ccc;   
}

* html .yui-calcontainer { 
   margin-left: 0em;
   margin-top: -16.5em; 
}

/* Fix for wierd IE6-bug on mouseover on datepicker */

* html .yui-calcontainer td a { 
  padding-left: 0.4em !important;
  padding-right: 0.4em !important;
}

/* There is IE7-specific conditional comments in editor.ftl for .yui-calcontainer */

a.calnavleft {
  left: 0 !important;
}

a.calnavright {
  right: 0 !important;
}

td.calcell.oom {
  background-color:#eee !important;
  color: #666 !important;
}

.calheader {
  margin-bottom: 0 !important;
}
      
/* END: YUI calendar */

/* ****** END: Event and Article specific styling */

